--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "vite": "^7.1.5"
   },
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^7.1.0",
+    "@fortawesome/free-regular-svg-icons": "^7.1.0",
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
+    "@fortawesome/react-fontawesome": "^3.0.2",
     "@tailwindcss/vite": "^4.1.11",
     "react-dom": "^19.1.1",
     "tailwindcss": "^4.1.11"
