--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^5.0.2",
+    "framer-motion": "^12.23.22",
     "from": "^0.1.7",
     "react": "^19.1.1",
     "vite": "^7.1.5"
